[metadata]
name = antlrCompile
version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/antlrCompile.py
description = Python bindings for ANTLR parser generator
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = ANTLR, grammar, parser, java, JVM
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
install_requires = 
	JAbs @ git+https://gitlab.com/KOLANICH/JAbs.py
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
